--- a/pixi.toml
+++ b/pixi.toml
@@ -8,8 +8,8 @@ version = "0.1.0"
 [tasks]
 
 [dependencies]
-python = ">=3.9.1"  
-numpy = ">=2.0.2,<3"
+python = "3.10.*"
+numpy = "2.0.2.*"
 matplotlib = ">=3.9.3,<4"
 scikit-learn = ">=1.5.2,<2"
 pip = ">=24.3.1,<25"
@@ -24,3 +24,4 @@ pydicom = ">=2.4.4,<3"
 nibabel = ">=5.3.2,<6"
 umap-learn = ">=0.5.7,<0.6"
 scikit-survival = ">=0.23.0,<0.24"
+jupyterlab = ">=4.4.2,<5"
