--- a/pixi.toml
+++ b/pixi.toml
@@ -25,3 +25,4 @@ nibabel = ">=5.3.2,<6"
 umap-learn = ">=0.5.7,<0.6"
 scikit-survival = ">=0.23.0,<0.24"
 jupyterlab = ">=4.4.2,<5"
+scipy = ">=1.15.2,<2"
